# cmake-kernel

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  run.sh
.github/workflows/: build.yml
cmake/: 3rd.cmake  CPM.cmake  add_header.cmake  clang.cmake  compile_config.cmake  config.cmake  functions.cmake  project_config.cmake  x86_64-riscv64-gcc.cmake  x86_64-x86_64-clang.cmake  x86_64-x86_64-gcc.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  build.md  docker.md
documentation/: CMakeLists.txt
ovmf/: RELEASEAARCH64_QEMU_EFI.fd:Zone.Identifier  RELEASEAARCH64_QEMU_VARS.fd:Zone.Identifier
source/: test_proj.cpp
src/: CMakeLists.txt
src/arch/: CMakeLists.txt
src/boot/: CMakeLists.txt  boot.cpp  boot_S.S  load_elf.cpp
src/boot/include/: boot.h
src/driver/: CMakeLists.txt  driver.cpp
src/driver/include/: driver.h
src/kernel/: CMakeLists.txt  main.cpp
src/kernel/arch/: CMakeLists.txt
src/kernel/arch/include/: arch.h
src/kernel/arch/riscv64/: arch.cpp  boot.S  boot.cpp  link.ld
src/kernel/arch/x86_64/: arch.cpp  link.ld
src/kernel/driver/: CMakeLists.txt  driver.cpp
src/kernel/include/: kernel.h
src/kernel/libc/: CMakeLists.txt  libc.c
src/kernel/libcxx/: CMakeLists.txt
src/libc/: libc.c
src/libc/include/: libc.h
src/libcxx/: libcxx.cpp
src/libcxx/include/: libcxx.h
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt
test/source/: test_proj.cpp
test/system_test/: CMakeLists.txt
test/system_test/gnu_efi_test/: CMakeLists.txt  boot.cpp  err.cpp  graphics.cpp  load_elf.cpp  load_elf.h  main.cpp  memory.cpp  printf_elf_info.cpp  read_elf.cpp
test/system_test/opensbi_test/: CMakeLists.txt  boot.S  boot.cpp
test/unit_test/: CMakeLists.txt
tools/: Dockerfile  startup.nsh
